Added health check. Renamed to people service.
