# app/people/api.py
@@ -6,6 +6,10 @@ PEOPLE collection
 from app.people.db import people_db
 
 
+def health():
+    return {'msg': 'ok'}, 200
+
+
 def read_all():
     """
     This function responds to a request for /api/people
@@ -13,7 +17,7 @@ def read_all():
     :return:        sorted list of people
     """
     # create the list of people from our data.
-    return people_db.read_all().to_json()
+    return people_db.read_all().to_json(), 200
 
 
 def get_person_by_last_name(lname):
@@ -24,4 +28,5 @@ def get_person_by_last_name(lname):
     :param lname:   the last name of the required person.
     :return:        person with the given last name.
     """
-    return people_db.get_person_by_last_name(lname).to_json()
+    return people_db.get_person_by_last_name(lname).to_json(), 200
+
